--- a/data/featured_projects.json
+++ b/data/featured_projects.json
@@ -1,60 +1,40 @@
 [
 		{
-			"image": "img/placeholder.jpg",
-			"title": "Awesome Feature",
-			"text": "This feature is amazing and helps you do awesome things. Is this text wrapping properly? I hope so I need a few mor words",
+			"image": "img/featured/gecko.webp",
+			"title": "Gecko Adventures",
+			"text": "Play the story of a gecko archeologist on the journey to find an ancient relic.",
 			"links": {
-				"github": "https://example.com/feature2",
-				"web": "https://example.com/feature2"
+				"web": "https://gorgeousone.itch.io/gecko-adventures",
+				"github": "https://github.com/GorgeousOne/Gecko-Adventures"
 			},
-			"tags": ["cool", "new", "featured"]
+			"tags": ["game", "unity", "2D", "platformer"]
 		},
 		{
-			"image": "img/placeholder.jpg",
-			"title": "Another Great Tool",
-			"text": "Super useful and easy to use.",
+			"image": "img/featured/maze.webp",
+			"title": "Tangled Maze",
+			"text": "A popular maze generator for the game Minecraft.",
 			"links": {
-				"web": "https://example.com/feature2"
+				"web": "https://www.spigotmc.org/resources/tangled-maze-maze-generator.59284/",
+				"github": "https://github.com/GorgeousOne/Tangled-Maze-2"
 			},
-			"tags": ["tools", "popular"]
+			"tags": ["java", "plugin", "spigotmc"]
 		},
 		{
-			"image": "img/placeholder.jpg",
-			"title": "Another Great Tool",
-			"text": "Super useful and easy to use.",
+			"image": "img/featured/place.webp",
+			"title": "r/place Timelapse Viewer",
+			"text": "A program to get in depth visualizations of the social media event \"r/place\" of 2023.",
 			"links": {
-				"web": "https://example.com/feature2"
+				"github": "https://github.com/GorgeousOne/r-place-2023-visualization"
 			},
-			"tags": ["tools", "popular"]
+			"tags": ["C++", "data visualization"]
 		},
 		{
-			"image": "img/placeholder.jpg",
-			"title": "Awesome Feature",
-			"text": "This feature is amazing and helps you do awesome things. This is bad isnt it?",
+			"image": "img/featured/jam.webp",
+			"title": "Bauhaus Game Jam",
+			"text": "The website I made for the annual game jam at our university.",
 			"links": {
-				"github": "https://example.com/feature2",
-				"web": "https://example.com/feature2"
+				"web": "https://jam.goosegirl.games/"
 			},
-			"tags": ["cool", "new", "featured"]
-		},
-		{
-			"image": "img/placeholder.jpg",
-			"title": "Awesome Feature",
-			"text": "This feature is amazing and helps you do awesome things. This is bad isnt it?",
-			"links": {
-				"github": "https://example.com/feature2",
-				"web": "https://example.com/feature2"
-			},
-			"tags": ["cool", "new", "featured"]
-		},
-		{
-			"image": "img/placeholder.jpg",
-			"title": "Awesome Feature",
-			"text": "This feature is amazing and helps you do awesome things. This is bad isnt it?",
-			"links": {
-				"github": "https://example.com/feature2",
-				"web": "https://example.com/feature2"
-			},
-			"tags": ["cool", "new", "featured"]
+			"tags": ["Web"]
 		}
 	]
